--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
       }
     ],
     "require": {
-        "chumper/zipper": "1.0.x",
-        "inetstudio/classifiers": "1.8.*",
-        "inetstudio/instagram": "1.7",
-        "inetstudio/vkontakte": "1.8.*",
-        "rutorika/sortable": "^4.7"
+        "inetstudio/admin-panel": "^6.0",
+        "inetstudio/classifiers": "^6.0",
+        "inetstudio/instagram": "^6.0",
+        "inetstudio/vkontakte": "^6.0",
+        "rutorika/sortable": "^6.0"
     },
     "autoload": {
       "psr-4": {
