--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
       }
     ],
     "require": {
-        "inetstudio/admin-panel": "^7.0",
-        "inetstudio/classifiers": "^7.0",
-        "inetstudio/instagram": "^7.0",
-        "inetstudio/vkontakte": "^7.0"
+        "inetstudio/admin-panel": "^8.0",
+        "inetstudio/classifiers": "^8.0",
+        "inetstudio/instagram": "^8.0",
+        "inetstudio/vkontakte": "^8.0",
+        "rutorika/sortable": "^8.0"
     },
     "autoload": {
       "psr-4": {
